// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`retrieveTheme should apply theme if ID is found 1`] = `
<retrieveThemespec__Example>
  <div
    className="retrieveThemespec__Example-ePzsat eRuwrd"
  />
</retrieveThemespec__Example>
`;

exports[`retrieveTheme should not apply theme if no ThemeProvider is found 1`] = `
<div
  className="retrieveThemespec__Example-ePzsat eRuwrd"
/>
`;

exports[`retrieveTheme should not apply theme if no matching ID is found 1`] = `
<retrieveThemespec__Example>
  <div
    className="retrieveThemespec__Example-ePzsat eRuwrd"
  />
</retrieveThemespec__Example>
`;
